--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    background-color: rgb(30, 30, 30);
+    background-color: #202020;
     background-image: linear-gradient(0, rgb(30, 30, 30), rgb(40, 40, 40));
     color: #f1f1f1;
     height: 100vh;
